code/lara03.txt
nohup: ignoring input
  File "./applyGaModel.py", line 265
    year+=1
          ^
IndentationError: unindent does not match any outer indentation level
